--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="tcNo">TC KİMLİK NO</string>
     <string name="lastLettersOfIdNo">KİMLİK SERİ NO SON 4 HANESİ</string>
     <string name="hes_kodu_al">HES KODU AL</string>
-    <string name="aboutApp">Hakkında</string>
+    <string name="aboutApp">Uygulama Hakkında</string>
     <string name="getHesBtn">HES KODUNU AL</string>
-    <string name="saveHES">HES KODUNU SAKLA</string>
+    <string name="saveHES">KAYDET</string>
     <string name="title_activity_save_hes_codes">SaveHesCodes</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
@@ -20,4 +20,5 @@
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="hesCodeReminder">Hes Kodunu Hatırlamak İçin Bir İsim Yazınız</string>
+    <string name="hesCodeSaveDesc">HES KODUNU KAYDET</string>
 </resources>
